syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message ServiceUpdateRequest {
    int32 id = 1;
    optional string title = 2;
    optional string entity = 3;
    optional int32 staff = 4;
    optional string frequency = 5;
    optional string unit = 6;
    optional double price = 7;
    optional string description = 8;
    repeated int32 variants = 10;
    optional bool active = 11;
    optional int32 brand = 12;
    optional string action_time = 13;
    optional string chi_dinh = 14;
    optional string chong_chi_dinh = 15;
    optional string cong_dung = 16;
    optional string caution = 17;
    optional string hinh_thuc = 18;
    optional string tac_dung_phu = 19;
    optional string number_register = 20;
    optional string number_decision = 21;
    optional string cong_ty_dk = 22;
    optional string message = 23;
}

message ServiceUpdateResponse {
    int32 code = 1;
    string message = 2;
    int32 details = 3;
}